spacing corrections

--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,8 @@ h5 {
   font-size: 170px;
   text-align: center;
   line-height: 160px;
-  margin-bottom: 45px;
+  margin-bottom: 35px;
+  margin-top: 25px;
 }
 
 .emoji img {
